--- a/.editorconfig
+++ b/.editorconfig
@@ -9,6 +9,10 @@ charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 
+[files/etc/config/*]
+indent_style = tab
+indent_size = 4
+
 # Use 4 spaces for the Python files
 [*.py]
 indent_size = 4
